syntax = "proto3";
import "bignum.proto";
package sequencer;

option java_multiple_files = true;
option java_package = "xyz.funkybit.sequencer.proto";
option java_outer_classname = "OrderSchema";

message Order {
  uint64 guid  = 1;

  enum Type {
    MarketBuy = 0;
    MarketSell = 1;
    LimitBuy = 2;
    LimitSell = 3;
  }

  Type type = 3;
  IntegerValue amount = 4;
  optional int32 levelIx = 5; // required for limit orders
  optional IntegerValue nonce = 6; // required for add order
  optional string signature = 7; // required for add order
  string externalGuid = 8;
  uint32 chainId = 9; // the chain id used when creating the signature - does not need to be related to the chain(s) of the market
  optional uint32 percentage = 10;
  optional IntegerValue maxAvailable = 11;
  optional string clientOrderGuid = 12;
}

message CancelOrder {
  uint64 guid = 1;
  string externalGuid = 2;
}

message OrderBatch {
  reserved 5;
  string guid = 1;
  string marketId = 2;
  uint64 account = 3;
  uint64 wallet = 4;
  repeated Order ordersToAdd = 6;
  repeated CancelOrder ordersToCancel = 7; // order guids
  bool cancelAll = 8;
}

enum OrderDisposition {
  Filled = 0;
  PartiallyFilled = 1;
  Accepted = 2;
  Rejected = 3;
  Failed = 4;
  Canceled = 5;
  AutoReduced = 6;
}

message BackToBackOrder {
  string guid = 1;
  uint64 account = 2;
  uint64 wallet = 3;
  repeated string marketIds = 4;
  Order order = 5;
}